<resources>
    <string name="app_name">Inventory</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_navbar">Menu</string>
    <string name="action_settings">Settings</string>

    <string name="no_data">No Data Found!</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="student">Student</string>
    <string name="book">Book</string>

    <string-array name="kumon_book_levels">

        <item>7A</item>
        <item>6A</item>
        <item>5A</item>
        <item>4A</item>
        <item>3A</item>
        <item>2A</item>
        <item>AI</item>
        <item>AII</item>
        <item>BI</item>
        <item>BII</item>
        <item>CI</item>
        <item>CII</item>
        <item>DI</item>
        <item>DII</item>
        <item>EI</item>
        <item>EII</item>
        <item>FI</item>
        <item>FII</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>

    </string-array>

    <string name="fragmentmanualinput">Manual Input</string>

    <string name="manual_input_student_id">Student ID: </string>
    <string name="manual_input_first_name">First Name: </string>
    <string name="manual_input_last_name">Last Name: </string>
    <string name="manual_input_dob">Birthdate: </string>
    <string name="manual_input_status">Eligibility: </string>
    <string name="manual_input_strikes">Warnings: </string>
    <string name="manual_input_student_book_history">Book History: </string>
    <string name="manual_input_dob_help">MMDDYYYY</string>

    <string name="manual_input_book_level">Level: </string>
    <string name="manual_input_book_number">Number: </string>
    <string name="manual_input_book_title">Title: </string>
    <string name="manual_input_book_author">Author: </string>
    <string name="manual_input_book_available">Available: </string>
    <string name="manual_input_book_barcode_number">Barcode #: </string>

    <string name="manual_input_scan">Scan Barcode: </string>
    <string name="manual_input_button_scan">Scan</string>
    <string name="manual_input_scan_or"> OR </string>
    <string name="checkout_input_new_student">New Student: </string>
    <string name="checkout_input_tv_lastname">Last Name: </string>
    <string name="checkout_input_tv_firstname">First Name: </string>
    <string name="checkout_book_availability">Availability: </string>

    <string name="manual_input_student_success">Successfully added student!</string>
    <string name="manual_input_book_success">Successfully added book!</string>

    <string name="error_toast_required_fields">Please complete the required fields!</string>
    <string name="error_toast_scan_error">Check Barcode! Invalid data!</string>
    <string name="error_toast_scan_student">Invalid student barcode!</string>

    <string name="button_look_up_book">Get Book Info</string>
    <string name="button_add_student">ADD STUDENT</string>
    <string name="button_add_book">ADD BOOK</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_next">NEXT >></string>
    <string name="button_checkout_book">Check Out</string>

    <string name="empty_student">New Student</string>

    <!--    Messages    -->
    <string name="startup_no_data">There appears to be no valid data.
            Would you like to pull data from another source?
            \n Yes: Pull from Google Drive.
            \n No: Manually enter data.</string>



</resources>
