<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin">

    <RelativeLayout
        android:id="@+id/RLbookcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <RelativeLayout
            android:id="@+id/RLbooklevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/tvbooklevel"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_book_level" />

            <EditText
                android:id="@+id/etbooklevel"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/field_input"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLbooknumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLbooklevel"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/tvbooknumber"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_book_number"/>

            <EditText
                android:id="@+id/etbooknumber"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/field_input"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLbooktitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLbooknumber"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/tvbooktitle"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_book_title"/>

            <EditText
                android:id="@+id/etbooktitle"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/field_input"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLbookauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLbooktitle"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/tvbookauthor"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_book_author"/>

            <EditText
                android:id="@+id/etbookauthor"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/field_input"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/RLbookavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLbookauthor"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/tvbookavailable"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_book_available"/>

            <EditText
                android:id="@+id/etbookavailable"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/field_input"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLbookbarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RLbookavailable"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/tvbookbarcode"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_book_barcode_number"/>

            <EditText
                android:id="@+id/etbookbarcode"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/field_input"/>

        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btnaddbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_large"
        android:textAlignment="center"
        android:textSize="@dimen/button_text"
        android:text="@string/button_add_book"/>

</RelativeLayout>