<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kumon">

    <RelativeLayout
        android:id="@+id/RLinputbookcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/RLScanContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">

            <RelativeLayout
                android:id="@+id/RLScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small" >

                <TextView
                    android:id="@+id/tvscan"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/label_input"
                    android:text="@string/manual_input_scan" />

                <Button
                    android:id="@+id/btnscan"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="@dimen/field_input"
                    android:text="@string/manual_input_button_scan"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvscanOR"
                android:layout_width="@dimen/field_input_width"
                android:layout_height="@dimen/field_input_height"
                android:layout_below="@+id/RLScan"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/label_input"
                android:text="@string/manual_input_scan_or" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLbookcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_below="@+id/RLScanContainer">

            <RelativeLayout
                android:id="@+id/RLbooklevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small">
                <!--android:layout_alignParentTop="true"-->


                <TextView
                    android:id="@+id/tvbooklevel"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/label_input"
                    android:text="@string/manual_input_book_level" />

                <Spinner
                    android:id="@+id/etbooklevel"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="@dimen/field_input"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RLbooknumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RLbooklevel"
                android:layout_margin="@dimen/margin_small">

                <TextView
                    android:id="@+id/tvbooknumber"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/label_input"
                    android:text="@string/manual_input_book_number"/>

                <EditText
                    android:id="@+id/etbooknumber"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="@dimen/field_input"/>
                <!--android:inputType="number"-->


            </RelativeLayout>


            <!-- this is where the other fields went -->

            <RelativeLayout
                android:id="@+id/RLbookavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RLbooknumber"
                android:layout_margin="@dimen/margin_small">
                <!--android:layout_below="@+id/RLbookauthor" -->


                <TextView
                    android:id="@+id/tvbookavailable"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/label_input"
                    android:text="@string/checkout_book_availability"/>

                <TextView
                    android:id="@+id/etbookavailable"
                    android:layout_width="@dimen/field_input_height"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="@dimen/field_input"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RLbookbarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RLbookavailable"
                android:layout_margin="@dimen/margin_small">

                <TextView
                    android:id="@+id/tvbookbarcode"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/label_input"
                    android:text="@string/manual_input_book_barcode_number"/>

                <TextView
                    android:id="@+id/etbookbarcode"
                    android:layout_width="@dimen/field_input_width"
                    android:layout_height="@dimen/field_input_height"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="@dimen/field_input"
                    android:textStyle="bold" />

            </RelativeLayout>


        </RelativeLayout>

        <Button
            android:id="@+id/btncheckoutbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_large"
            android:textAlignment="center"
            android:textSize="@dimen/button_text"
            android:text="@string/button_checkout_book"/>


    </RelativeLayout>



</RelativeLayout>


    <!--<RelativeLayout-->
    <!--android:id="@+id/RLBookSearch"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/RLbooknumber"-->
    <!--android:layout_margin="@dimen/margin_small">-->

    <!--<Button-->
    <!--android:id="@+id/btngetinfo"-->
    <!--android:layout_width="@dimen/field_input_width"-->
    <!--android:layout_height="@dimen/field_input_height"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/button_look_up_book"/>-->

    <!--</RelativeLayout>-->

    <!--<RelativeLayout-->
    <!--android:id="@+id/RLbooktitle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/RLbooknumber"-->
    <!--android:layout_margin="@dimen/margin_small">-->

    <!--<TextView-->
    <!--android:id="@+id/tvbooktitle"-->
    <!--android:layout_width="@dimen/field_input_width"-->
    <!--android:layout_height="@dimen/field_input_height"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:gravity="center_vertical"-->
    <!--android:textStyle="bold"-->
    <!--android:textSize="@dimen/label_input"-->
    <!--android:text="@string/manual_input_book_title"/>-->

    <!--<EditText-->
    <!--android:id="@+id/etbooktitle"-->
    <!--android:layout_width="@dimen/field_input_width"-->
    <!--android:layout_height="@dimen/field_input_height"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:gravity="center"-->
    <!--android:textSize="@dimen/field_input"/>-->

    <!--</RelativeLayout>-->

    <!--<RelativeLayout-->
    <!--android:id="@+id/RLbookauthor"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/RLbooktitle"-->
    <!--android:layout_margin="@dimen/margin_small">-->

    <!--<TextView-->
    <!--android:id="@+id/tvbookauthor"-->
    <!--android:layout_width="@dimen/field_input_width"-->
    <!--android:layout_height="@dimen/field_input_height"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:gravity="center_vertical"-->
    <!--android:textStyle="bold"-->
    <!--android:textSize="@dimen/label_input"-->
    <!--android:text="@string/manual_input_book_author"/>-->

    <!--<EditText-->
    <!--android:id="@+id/etbookauthor"-->
    <!--android:layout_width="@dimen/field_input_width"-->
    <!--android:layout_height="@dimen/field_input_height"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:gravity="center"-->
    <!--android:textSize="@dimen/field_input"/>-->

    <!--</RelativeLayout>-->